force-app/main/default/objects/College__c/fields/College_Id__c.field-meta.xml
<CustomField>
    <fullName>College_Id__c</fullName>
    <label>College Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>