force-app/main/default/objects/College__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <length>30</length>
    <type>Text</type>
</CustomField>