force-app/main/default/objects/College__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>University</label>
    <length>30</length>
    <type>Text</type>
</CustomField>