force-app/main/default/objects/College__c/fields/Student_name__c.field-meta.xml
<CustomField>
    <fullName>Student_name__c</fullName>
    <label>Student name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>